--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+<body style="margin: 0px;">
+  <script src="/__/firebase/6.6.1/firebase-app.js"></script>
+  <script src="/__/firebase/init.js"></script>
   <app-root></app-root>
+  
 </body>
 </html>
